lang2/macro/tests/ui/fail/10-async-constructor.stderr
error: `async fn` is not supported for ink! functions
  --> $DIR/10-async-constructor.rs:12:9
   |
12 |         async fn invalid_return(&mut self) {}
   |         ^^^^^
